fixing cut off full name box on mobile view

--- a/style.css
+++ b/style.css
@@ -487,7 +487,7 @@ h2{
     border: 1px solid rgb(26, 32, 65);
     background-color: rgb(26, 32, 65);
     color: white;
-    width: 20%;
+    width: 30%;
     height: 30px;
     font-size: 16px;
     font-family: 'Montserrat', sans-serif;
